@@ -234,7 +234,7 @@ class SGL_Task_BuildHeaders extends SGL_DecorateProcess
             //  prepare headers during setup, can be overridden later
             header('Last-Modified: ' . gmdate("D, d M Y H:i:s") . ' GMT');
             header('Content-Type: text/html; charset=' . $GLOBALS['_SGL']['CHARSET']);
-            header('X-Powered-By: Seagull http://seagull.phpkitchen.com');
+            header('X-Powered-By: Seagull http://seagullproject.org');
         }
     }
 }
