@@ -3,12 +3,19 @@ setHeaders      = false
 requiresAuth    = false
 
 feedCopyright = Seagull Systems
-feedEmail = seagull@phpkitchen.com
+feedEmail = seagull@seagullproject.org
 feedEditor = Demian Turner
 feedWebmaster = demian@phpkitchen.com
 feedTitle = Seagull News
 feedDescription = Latest news for the Seagull framework and CMS project
 feedCategory = PHP
-feedUrl = http://seagull.phpkitchen.com
-feedSyndicationUrl = http://seagull.phpkitchen.com/index.php/export/rss/
+feedUrl = http://seagullproject.org
+feedSyndicationUrl = http://seagullproject.org/index.php/export/rss/
 feedRssTtl = 720 ; minutes, ie 2 times/day
+
+filterChain     = " SGL_Task_Init,
+                    SGL_Task_ResolveManager,
+                    SGL_Task_CustomHeaders,
+                    SGL_Task_BuildView,
+                    SGL_Task_CustomBuildOutputData,
+                    SGL_Task_CoreProcessor"
